5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1577_1327.log
== SUBMITION (2019-03-14 19:12:58) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.1521
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:22) 
-- CODE:
print(90 - 45-)
-- EXECUTION TIME:
0.201008
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 - 45-)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:26) 
-- CODE:
print(90 -- 45)
-- EXECUTION TIME:
0.156959
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:27) 
-- CODE:
print(90 -- 45)
-- EXECUTION TIME:
0.174657
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:27) 
-- CODE:
print(90 -- 45)
-- EXECUTION TIME:
0.105708
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:27) 
-- CODE:
print(90 -- 45)
-- EXECUTION TIME:
0.116895
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:27) 
-- CODE:
print(90 -- 45)
-- EXECUTION TIME:
0.122132
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:27) 
-- CODE:
print(90 -- 45)
-- EXECUTION TIME:
0.158324
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:14:00) 
-- CODE:
print(90 | 45)
-- EXECUTION TIME:
0.169185
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
127
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:14:01) 
-- CODE:
print(90 | 45)
-- EXECUTION TIME:
0.130383
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
127
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:09) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.174662
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:10) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.191071
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:10) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.126055
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:10) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.10489
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:10) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.155861
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:11) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.120291
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:11) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.118952
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:11) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.106692
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:11) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.11632
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:31) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.153993
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:32) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.185726
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:32) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.114404
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:32) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.124728
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:33) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.231601
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:33) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.126555
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:33) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.218621
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:33) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.123825
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:33) 
-- CODE:
print(90_45)
-- EXECUTION TIME:
0.187095
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90_45)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:39) 
-- CODE:
print(90\45)
-- EXECUTION TIME:
0.145121
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90\45)
               ^
SyntaxError: unexpected character after line continuation character

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:39) 
-- CODE:
print(90\45)
-- EXECUTION TIME:
0.19018
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90\45)
               ^
SyntaxError: unexpected character after line continuation character

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:39) 
-- CODE:
print(90\45)
-- EXECUTION TIME:
0.121257
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90\45)
               ^
SyntaxError: unexpected character after line continuation character

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:15) 
-- CODE:
print(-90 + -45)
-- EXECUTION TIME:
0.206736
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:16) 
-- CODE:
print(-90 + -45)
-- EXECUTION TIME:
0.17453
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:16) 
-- CODE:
print(-90 + -45)
-- EXECUTION TIME:
0.133794
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:16) 
-- CODE:
print(-90 + -45)
-- EXECUTION TIME:
0.133023
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:16) 
-- CODE:
print(-90 + -45)
-- EXECUTION TIME:
0.125751
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:49) 
-- CODE:
print(90 menos 45)
-- EXECUTION TIME:
0.174062
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 menos 45)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:50) 
-- CODE:
print(90 menos 45)
-- EXECUTION TIME:
0.146009
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 menos 45)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:50) 
-- CODE:
print(90 menos 45)
-- EXECUTION TIME:
0.130689
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 menos 45)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:50) 
-- CODE:
print(90 menos 45)
-- EXECUTION TIME:
0.190427
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 menos 45)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:52) 
-- CODE:
print(90 menos 45)
-- EXECUTION TIME:
0.168263
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 menos 45)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:53) 
-- CODE:
print(90 menos 45)
-- EXECUTION TIME:
0.130222
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 menos 45)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:53) 
-- CODE:
print(90 menos 45)
-- EXECUTION TIME:
0.205937
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 menos 45)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:07) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.14158
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:08) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.158256
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:08) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.115917
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:08) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.110891
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:08) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.108834
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:09) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.120603
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:09) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.16371
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:09) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.120804
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:09) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.143087
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:10) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.190173
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:11) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.168348
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:11) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.116758
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:12) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.164232
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:12) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.116089
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:12) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.110015
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:12) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.147445
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:12) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.103917
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:12) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.101452
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:13) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.137378
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:13) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.114905
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:13) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.182738
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:13) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.120336
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:13) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.13422
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:14) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.114518
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:14) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.114884
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:14) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.115538
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:14) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.110336
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:14) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.10676
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:14) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.128481
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:15) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.118813
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:15) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.268212
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:15) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.145511
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:15) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.122285
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:15) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.119156
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:15) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.124125
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:16) 
-- CODE:
print(90 (-) 45)
-- EXECUTION TIME:
0.200609
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90 (-) 45)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:49) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.177986
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:50) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.187837
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:50) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.115906
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:50) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.136653
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:50) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.111605
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:50) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.115963
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:51) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.233568
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:51) 
-- CODE:
print(90-45)
-- EXECUTION TIME:
0.120591
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:55) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.165447
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:55) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.198375
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:56) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.102896
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:56) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.107951
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:56) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.109897
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:56) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.112457
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:56) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.107875
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:56) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.113873
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:56) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.108328
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:57) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.126922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:57) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.121961
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:57) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.115447
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:57) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.121917
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:57) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.167465
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:57) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.107447
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:58) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.13432
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:58) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.167733
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:58) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.103418
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:58) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.156678
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:58) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.125167
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:59) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.127677
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:59) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.176079
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:10) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.163225
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:10) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.128821
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:11) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.172409
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:13) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.110153
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:53) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.214878
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:54) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.128558
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1327/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:54) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.114652
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:54) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.1339
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:54) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.121218
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:54) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.115202
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:54) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.109719
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:55) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.123467
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:55) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.122619
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:55) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.135115
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:55) 
-- CODE:
print(90 - 45)
-- EXECUTION TIME:
0.169576
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:21:24) 
-- CODE:
print(90 - 55)
-- EXECUTION TIME:
0.194523
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
